--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -6,13 +6,6 @@ body {
   background-size: cover;
 }
 
-#shuttle-body {
-  background-image: url("/shuttle_backdrop.jpg");
-  background-size: cover;
-  font-family: 'Raleway', sans-serif;
-  text-align: center;
-}
-
 h1 {
   margin: auto;
   background-color: #333;
@@ -23,18 +16,16 @@ h1 {
 }
 
 .black_hole_left {
-  margin-top: 190px;
   float: left;
   width: 350px;
 }
 
 .black_hole_right {
-  margin-top: 190px;
   float: right;
   width: 350px;
 }
 
-.black_hole_bottom {
-  position: fixed;
-   bottom: 0;
-}
+/* .black_hole_centre {
+  float: center;
+  width: 200px;
+} */
